--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ca.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ca.properties
@@ -1036,8 +1036,8 @@ command.exp_admin=Exportaci\u00f3
 command.faceted.search.clear=Esborrar
 
 # google translation: please check
-#en: Go \u00BB
-command.faceted.search.go=Anar \u00BB
+#en: Go \u00bb
+command.faceted.search.go=Anar \u00bb
 
 # Human translation
 #en: Home
