--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_es.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_es.properties
@@ -1078,8 +1078,8 @@ command.exp_admin=Exportaci\u00f3n
 command.faceted.search.clear=Borrar
 
 # google translation: please check
-#en: Go \u00BB
-command.faceted.search.go=Ir \u00BB
+#en: Go \u00bb
+command.faceted.search.go=Ir \u00bb
 
 # Human translation
 #en: Home
