--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_it.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_it.properties
@@ -1103,8 +1103,8 @@ command.exp_admin=Export
 command.faceted.search.clear=Cancella
 
 # google translation: please check
-#en: Go \u00BB
-command.faceted.search.go=Go \u00BB
+#en: Go \u00bb
+command.faceted.search.go=Go \u00bb
 
 # Human translation
 #en: Home
