--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ja.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ja.properties
@@ -1095,8 +1095,8 @@ command.exp_admin=\u30a8\u30af\u30b9\u30dd\u30fc\u30c8
 command.faceted.search.clear=\u30af\u30ea\u30a2
 
 # google translation: please check
-#en: Go \u00BB
-command.faceted.search.go=\u79fb\u52d5\u00BB
+#en: Go \u00bb
+command.faceted.search.go=\u79fb\u52d5\u00bb
 
 # Human translation
 #en: Home
