--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pl.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pl.properties
@@ -1095,8 +1095,8 @@ command.exp_admin=Export
 command.faceted.search.clear=Wyczy\u015b\u0107
 
 # google translation: please check
-#en: Go \u00BB
-command.faceted.search.go=Id\u017a \u00BB
+#en: Go \u00bb
+command.faceted.search.go=Id\u017a \u00bb
 
 # Human translation
 #en: Home
