--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pt.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pt.properties
@@ -1095,8 +1095,8 @@ command.exp_admin=Exporta\u00e7\u00e3o
 command.faceted.search.clear=Limpar
 
 # google translation: please check
-#en: Go \u00BB
-command.faceted.search.go=Ir \u00BB
+#en: Go \u00bb
+command.faceted.search.go=Ir \u00bb
 
 # Human translation
 #en: Home
