--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ru.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ru.properties
@@ -1095,8 +1095,8 @@ command.exp_admin=\u042d\u043a\u0441\u043f\u043e\u0440\u0442
 command.faceted.search.clear=\u041e\u0447\u0438\u0441\u0442\u0438\u0442\u044c
 
 # google translation: please check
-#en: Go \u00BB
-command.faceted.search.go=\u041f\u0435\u0440\u0435\u0439\u0442\u0438 \u00BB
+#en: Go \u00bb
+command.faceted.search.go=\u041f\u0435\u0440\u0435\u0439\u0442\u0438 \u00bb
 
 # Human translation
 #en: Home
