--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ar.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ar.properties
@@ -1095,8 +1095,8 @@ command.exp_admin=\u062a\u0635\u062f\u064a\u0631
 command.faceted.search.clear=\u0648\u0627\u0636\u062d
 
 # google translation: please check
-#en: Go \u00BB
-command.faceted.search.go=\u0627\u0644\u0630\u0647\u0627\u0628 \u00BB
+#en: Go \u00bb
+command.faceted.search.go=\u0627\u0644\u0630\u0647\u0627\u0628 \u00bb
 
 # Human translation
 #en: Home
