--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_de.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_de.properties
@@ -1095,8 +1095,8 @@ command.exp_admin=Export
 command.faceted.search.clear=Clear
 
 # google translation: please check
-#en: Go \u00BB
-command.faceted.search.go=Gehe \u00BB
+#en: Go \u00bb
+command.faceted.search.go=Gehe \u00bb
 
 # Human translation
 #en: Home
