NXP-7076: add missing French labels for rich:calendar

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1975,3 +1975,11 @@ label.oauth.1mth=1 mois
 
 # Main tabs
 label.main.tab.documents=Document Management
+
+# RichFaces Calendar labels
+RICH_CALENDAR_APPLY_LABEL=Appliquer
+RICH_CALENDAR_TODAY_LABEL=Aujourd\\'hui
+RICH_CALENDAR_CLOSE_LABEL=x
+RICH_CALENDAR_OK_LABEL=OK
+RICH_CALENDAR_CLEAN_LABEL=Remettre \u00e0 blanc
+RICH_CALENDAR_CANCEL_LABEL=Annuler
