NXP-7080: Add groupLabel message property

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -780,6 +780,7 @@ label.userManager.confirmDeleteUser=Delete user?
 label.userManager.confirmDeleteGroup=Delete group?
 label.groupManager.groups=Groups
 label.groupManager.groupName=Group name
+label.groupManager.groupLabel=Group label
 label.groupManager.userMembers=Group's members
 label.groupManager.groupMembers=Sub-groups
 
