--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -900,6 +900,7 @@ command.download=T\u00e9l\u00e9charger
 
 label.groupManager.groupMembers=Sous-groupes
 label.groupManager.groupName=Nom du groupe
+label.groupManager.groupLabel=Libell\u00e9 du groupe
 label.groupManager.groups=Groupes
 label.groupManager.userMembers=Membres du groupe
 label.groupManager.editGroup=Modifier
