--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -999,6 +999,7 @@ label.groupManager.emptyGroupList=No group matching the entered criteria
 label.groupManager.emptyGroupName=Group name cannot be empty!
 label.groupManager.groupMembers=Sub-groups
 label.groupManager.groupName=Group name
+label.groupManager.groupLabel=Group label
 label.groupManager.groups=Groups
 label.groupManager.userMembers=Group's members
 label.groupManager.viewGroup=View
