NXP-6387: User rich profile

--- a/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -1,1 +1,4 @@
 user.center.profile=Profil
+label.userprofile.avatar=Avatar
+label.userprofile.birthdate=Date de naissance
+label.userprofile.phonenumber=Num\u00E9ro de t\u00E9l\u00E9phone
