--- a/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -2,3 +2,11 @@ user.center.profile=Profile
 label.userprofile.avatar=Avatar
 label.userprofile.birthdate=Birth date
 label.userprofile.phonenumber=Phone number
+label.userprofile.sex=Sex
+label.userprofile.schoolworkinfo=School/work information
+label.userprofile.interests=Interests
+label.userprofile.careerobjective=Career objective
+label.userprofile.skills=Skills
+label.userprofile.publicprofile=Public profile
+label.userprofile.sex.man=Man
+label.userprofile.sex.woman=Woman
