--- a/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -2,3 +2,11 @@ user.center.profile=Profil
 label.userprofile.avatar=Avatar
 label.userprofile.birthdate=Date de naissance
 label.userprofile.phonenumber=Num\u00E9ro de t\u00E9l\u00E9phone
+label.userprofile.sex=Sexe
+label.userprofile.schoolworkinfo=Cursus scolaire/professionnel
+label.userprofile.interests=Centres d'int\u00E9r\u00EAts
+label.userprofile.careerobjective=Souhaits professionnels
+label.userprofile.skills=Comp\u00E9tences
+label.userprofile.publicprofile=Profil publique
+label.userprofile.sex.man=Homme
+label.userprofile.sex.woman=Femme
