NXP-7193: edition birth day date with mm/dd/yy format and help label

--- a/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -10,3 +10,4 @@ label.userprofile.skills=Skills
 label.userprofile.publicprofile=Public profile
 label.userprofile.sex.man=Man
 label.userprofile.sex.woman=Woman
+helplabel.userprofile.birthdate=Enter a Birth date following the format "mm/dd/yy" such as "10/29/90"
