Typo in fr messages

--- a/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -10,4 +10,4 @@ label.userprofile.skills=Comp\u00E9tences
 label.userprofile.publicprofile=Profil publique
 label.userprofile.sex.man=Homme
 label.userprofile.sex.woman=Femme
-helplabel.userprofile.birthdate=Sasir une date d'anniversaire au format  "jj/mm/aa" comme "29/10/90"
+helplabel.userprofile.birthdate=Saisir une date d'anniversaire au format  "jj/mm/aa" comme "29/10/90"
