NXCM410:routing step can be moved up before a running step

--- a/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -37,3 +37,5 @@ feedback.casemanagement.document.route.already.first.step.in.container=Step is a
 feedback.casemanagement.document.already.last.step.in.container=Step is already last in container
 feedback.casemanagement.document.route.cant.move.step.after.no.modifiable.step=Can not move  this step before a step which is not modifiable
 feedback.casemanagement.document.route.route_duplicated=Route has been duplicated
+feedback.casemanagement.document.route.cant.move.step.before.already.running.step=Can not move this step before an already running step
+feedback.casemanagement.document.route.cant.move.step.after.already.running.step=Can not move this step after an already running step
