--- a/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -37,4 +37,6 @@ feedback.casemanagement.document.route.cant.move.steps.in.parallel.container=Les
 feedback.casemanagement.document.route.already.first.step.in.container=L'étape est déjà en première position
 feedback.casemanagement.document.already.last.step.in.container=L'étape est déjà en dernière position
 feedback.casemanagement.document.route.cant.move.step.after.no.modifiable.step=Impossible déplacer avant une étape déjà exécutée
-feedback.casemanagement.document.route.route_duplicated=La route a été dupliqué
+feedback.casemanagement.document.route.route_duplicated=La route a été dupliquée
+feedback.casemanagement.document.route.cant.move.step.before.already.running.step=Impossible de déplacer cette étape avant une étape déjà exécutée
+feedback.casemanagement.document.route.cant.move.step.after.already.running.step=Impossible de déplacer cette étape après une étape déjà exécutée
