--- a/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -11,3 +11,4 @@ label.userprofile.publicprofile=Profil publique
 label.userprofile.sex.man=Homme
 label.userprofile.sex.woman=Femme
 helplabel.userprofile.birthdate=Saisir une date d'anniversaire au format  "jj/mm/aa" comme "29/10/90"
+helplabel.userprofile.avatar=Les images d'avatar dont la taille est sup\u00E9rieure \u00E0 300x200 pixels sont redimensionn\u00E9es
