--- a/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -11,3 +11,4 @@ label.userprofile.publicprofile=Public profile
 label.userprofile.sex.man=Man
 label.userprofile.sex.woman=Woman
 helplabel.userprofile.birthdate=Enter a Birth date following the format "mm/dd/yy" such as "10/29/90"
+helplabel.userprofile.avatar=Avatar images greater than 300x200 pixels are resized
