--- a/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -2,13 +2,13 @@ user.center.profile=Profil
 label.userprofile.avatar=Avatar
 label.userprofile.birthdate=Date de naissance
 label.userprofile.phonenumber=Num\u00E9ro de t\u00E9l\u00E9phone
-label.userprofile.sex=Sexe
+label.userprofile.gender=Sexe
 label.userprofile.schoolworkinfo=Cursus scolaire/professionnel
 label.userprofile.interests=Centres d'int\u00E9r\u00EAts
 label.userprofile.careerobjective=Souhaits professionnels
 label.userprofile.skills=Comp\u00E9tences
 label.userprofile.publicprofile=Profil publique
-label.userprofile.sex.man=Homme
-label.userprofile.sex.woman=Femme
+label.userprofile.gender.man=Homme
+label.userprofile.gender.woman=Femme
 helplabel.userprofile.birthdate=Saisir une date d'anniversaire au format  "jj/mm/aa" comme "29/10/90"
 helplabel.userprofile.avatar=Les images d'avatar dont la taille est sup\u00E9rieure \u00E0 300x200 pixels sont redimensionn\u00E9es
