--- a/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -2,13 +2,13 @@ user.center.profile=Profile
 label.userprofile.avatar=Avatar
 label.userprofile.birthdate=Birth date
 label.userprofile.phonenumber=Phone number
-label.userprofile.sex=Sex
+label.userprofile.gender=Gender
 label.userprofile.schoolworkinfo=School/work information
 label.userprofile.interests=Interests
 label.userprofile.careerobjective=Career objective
 label.userprofile.skills=Skills
 label.userprofile.publicprofile=Public profile
-label.userprofile.sex.man=Man
-label.userprofile.sex.woman=Woman
+label.userprofile.gender.man=Man
+label.userprofile.gender.woman=Woman
 helplabel.userprofile.birthdate=Enter a Birth date following the format "mm/dd/yy" such as "10/29/90"
 helplabel.userprofile.avatar=Avatar images greater than 300x200 pixels are resized
