NXP-5322 - check that configured address and port are available before start

--- a/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages.properties
+++ b/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages.properties
@@ -30,6 +30,7 @@ label.nuxeo.log.dir.help = This is the directory where the log files are stored.
 label.nuxeo.data.dir = Data storage directory
 label.nuxeo.data.dir.help = Nuxeo data is stored on the filesystem. You can change the location of the directory where data will be stored.
 error.invalid.ip = You must enter a valid IP address.
+error.already.used.ip = Address and/or port unavailable.
 
 label.proxySettings = HTTP proxy settings
 label.proxySettings.description = Your Nuxeo server must have access to the Internet for you to be able to use the Nuxeo Marketplace and Update Center features. If your organization uses a proxy to access Internet, you can set it here.
