--- a/nuxeo-launcher/src/main/resources/i18n/messages_en.properties
+++ b/nuxeo-launcher/src/main/resources/i18n/messages_en.properties
@@ -4,9 +4,11 @@ mainbutton.start.inprogress=Starting server...
 mainbutton.stop.text=Stop
 mainbutton.stop.tooltip=Stop the Nuxeo server.
 mainbutton.stop.inprogress=Stopping server...
+browser.button.text=Open in browser
 tab.summary.title=Summary
 summary.status.label=Current server status:
 summary.url.label=Server URL:
 summary.homedir.label=Nuxeo home:
 summary.nuxeoconf.label=Nuxeo configuration:
 summary.datadir.label=Data directory:
+error.occurred=An error occurred:
