--- a/nuxeo-launcher/src/main/resources/i18n/messages_fr.properties
+++ b/nuxeo-launcher/src/main/resources/i18n/messages_fr.properties
@@ -4,9 +4,11 @@ mainbutton.start.inprogress=En cours de d\u00E9marrage...
 mainbutton.stop.text=Arr\u00EAter
 mainbutton.stop.tooltip=Arr\u00EAter le serveur Nuxeo.
 mainbutton.stop.inprogress=Arr\u00EAt en cours...
+browser.button.text=Ouvrir dans le navigateur
 tab.summary.title=R\u00E9sum\u00E9
 summary.status.label=Etat actuel du serveur :
 summary.url.label=URL du serveur :
 summary.homedir.label=R\u00E9pertoire Nuxeo :
 summary.nuxeoconf.label=Configuration Nuxeo :
 summary.datadir.label=R\u00E9pertoire des donn\u00E9es :
+error.occurred=Une erreur s'est produite:
