NXP-5322 - cannot check port

--- a/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages_fr.properties
@@ -30,7 +30,7 @@ label.nuxeo.log.dir.help = Emplacement du r\u00e9pertoire des fichiers de log.
 label.nuxeo.data.dir = R\u00e9pertoire de stockage des donn\u00e9es
 label.nuxeo.data.dir.help = Les donn\u00e9es stock\u00e9es dans Nuxeo sont conserv\u00e9es sur le syst\u00e8me de fichier. Vous pouvez utiliser ce param\u00e8tre pour d\u00e9finir leur emplacement.
 error.invalid.ip = Vous devez saisir une adresse IP valide.
-error.already.used.ip = L'adresse et/ou le port ne sont pas disponibles.
+error.already.used.ip = L'adresse n'est pas disponible.
 
 label.proxySettings = Param\u00e8tres de proxy HTTP.
 label.proxySettings.description = L'utilisation de Nuxeo Marketplace et de l'Update Center requiert que votre serveur Nuxeo ait acc\u00e8s \u00e0 Internet. Si votre entreprise utilise un proxy, vous pouvez le configurer ci-dessous.
