add missing labels

--- a/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -12,3 +12,5 @@ label.userprofile.gender.man=Homme
 label.userprofile.gender.woman=Femme
 helplabel.userprofile.birthdate=Saisir une date d'anniversaire au format  "jj/mm/aa" comme "29/10/90"
 helplabel.userprofile.avatar=Les images d'avatar dont la taille est sup\u00E9rieure \u00E0 300x200 pixels sont redimensionn\u00E9es
+
+user.center.profile.tab.view=Profil
