NXP-7388: internationalize gadgets and categories names in the popup listing the gadgets

--- a/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -5,3 +5,6 @@ label.gadget.no.document=There is no document to show
 label.gadget.edit=Edit
 label.gadget.quicksearch.description=Type a text to start the document search
 label.gadget.quicksearch=Quick Search
+
+gadget.category.utilities=Utilities
+gadget.category.media=Media
