--- a/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -5,3 +5,6 @@ label.gadget.no.document=Il n\\'y a aucun document \u00E0 afficher
 label.gadget.edit=Modifier
 label.gadget.quicksearch.description=Tapez un texte pour d\u00E9marrer la recherche
 label.gadget.quicksearch=Recherche rapide
+
+gadget.category.utilities=Utilitaires
+gadget.category.media=Media
