--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1853,7 +1853,7 @@ command.order.movedown=D\u00e9placer vers le bas
 command.order.movetotop=D\u00e9placer au d\u00e9but
 command.order.movetobottom=D\u00e9placer \u00e0 la fin
 
-feedback.order.movedDown=Document d\u00e9plac\u00e9 vers le basn
+feedback.order.movedDown=Document d\u00e9plac\u00e9 vers le bas
 feedback.order.movedUp=Document d\u00e9plac\u00e9 vers le haut
 feedback.order.movedToTop=Document d\u00e9plac\u00e9 au debut
 feedback.order.movedToBottom=Document d\u00e9plac\u00e9 \u00e0 la fin
@@ -1871,7 +1871,7 @@ command.selection.resetSelectedColumns=R\u00e9initialiser les colonnes de r\u00e
 
 label.selection.availableColumns=Colonnes disponibles
 label.selection.selectedColumns=Colonnes choisies
-label.selection.column.icon_type=Icone/Type
+label.selection.column.icon_type=Ic\u00f4ne/Type
 label.selection.column.title_link=Titre avec lien
 label.selection.column.lock=Information de verrouillage
 label.selection.column.livedit_link=Lien Live Edit
