DAM-612: working on 5.4.2 alignment

--- a/nuxeo-dam-lang/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-dam-lang/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -178,3 +178,5 @@ label.duration.unit.days=d
 label.duration.unit.hours=hr
 label.duration.unit.minutes=min
 label.duration.unit.seconds=sec
+
+label.main.tab.dam=DAM
