--- a/nuxeo-dam-lang/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-dam-lang/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -203,3 +203,5 @@ label.duration.unit.days=j
 label.duration.unit.hours=hr
 label.duration.unit.minutes=min
 label.duration.unit.seconds=sec
+
+label.main.tab.dam=DAM
