--- a/nuxeo-dam-lang/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-dam-lang/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -192,3 +192,5 @@ label.duration.unit.days=d
 label.duration.unit.hours=hr
 label.duration.unit.minutes=min
 label.duration.unit.seconds=sec
+
+label.main.tab.dam=DAM
