NXCM-446: add conditional step document type

--- a/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -28,6 +28,7 @@ label.widget.document_routing_route_content.dr_listing_add_step=Add Steps
 label.widget.document_routing_route_content.dr_listing_remove_step=Remove Step
 label.widget.document_routing_route_content.dr_listing_step_actions=Actions
 label.widget.document_routing_route_content.dr_listing_route_element_state=State
+label.widget.conditional_step_folder.conditional_step_value=Execute next
 label.content.header.comments=Comments
 feedback.document.route.no.creation.rights=You don't have enough rights.
 feedback.casemanagement.document.route.already.locked=Route already locked!
