--- a/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -29,6 +29,7 @@ label.widget.document_routing_route_content.dr_listing_add_step=Ajouter une étap
 label.widget.document_routing_route_content.dr_listing_remove_step=Suprimer une étape
 label.widget.document_routing_route_content.dr_listing_step_actions=Actions
 label.widget.document_routing_route_content.dr_listing_route_element_state=Etat
+label.widget.conditional_step_folder.conditional_step_value=Etape suivante
 label.content.header.comments=Commentaires
 feedback.document.route.no.creation.rights=Vous ne disposez pas des droits suffisants.
 feedback.casemanagement.document.route.already.locked=Route d\u00E9verrouill\u00E9!
