NXCM-456 Modify label in summary lock panel

--- a/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -30,6 +30,9 @@ label.widget.document_routing_route_content.dr_listing_step_actions=Actions
 label.widget.document_routing_route_content.dr_listing_route_element_state=State
 label.widget.conditional_step_folder.conditional_step_value=Execute next
 label.content.header.comments=Comments
+label.summary.route.locked.intro=The route is
+label.summary.route.locked=locked
+label.summary.route.unlocked=unlocked
 feedback.document.route.no.creation.rights=You don't have enough rights.
 feedback.casemanagement.document.route.already.locked=Route already locked!
 feedback.casemanagement.document.route.not.locked=Route not locked!
