--- a/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -4,7 +4,6 @@ Step=Etape
 DocumentRouteInstancesRoot=Instances de feuille de route
 label.document.routing.cancel.route=Annuler Route
 label.document.routing.saveAsNew=Sauvegarder Route comme nouvelle route
-DocumentRouteInstancesRoot=Instances de feuille de route
 label.document.routing.initiator=Initiateur
 label.document.routing.participatingDocuments=Documents participatifs
 label.document.routing.tokens=Etiquette
@@ -31,9 +30,12 @@ label.widget.document_routing_route_content.dr_listing_step_actions=Actions
 label.widget.document_routing_route_content.dr_listing_route_element_state=Etat
 label.widget.conditional_step_folder.conditional_step_value=Etape suivante
 label.content.header.comments=Commentaires
+label.summary.route.locked.intro=La route est
+label.summary.route.locked=verrouill\u00E9e
+label.summary.route.unlocked=d\u00E9verrouill\u00E9e
 feedback.document.route.no.creation.rights=Vous ne disposez pas des droits suffisants.
-feedback.casemanagement.document.route.already.locked=Route d\u00E9verrouill\u00E9!
-feedback.casemanagement.document.route.not.locked=Route pas d\u00E9verrouill\u00E9!
+feedback.casemanagement.document.route.already.locked=Route d\u00E9verrouill\u00E9\!
+feedback.casemanagement.document.route.not.locked=Route pas d\u00E9verrouill\u00E9\!
 feedback.casemanagement.document.route.cant.move.steps.in.parallel.container=Les déplacements ne sont pas possibles dans une feuille de route ou un branchement en parallèle
 feedback.casemanagement.document.route.already.first.step.in.container=L'étape est déjà en première position
 feedback.casemanagement.document.already.last.step.in.container=L'étape est déjà en dernière position
