NXP-7595: Add tooltips for comment and versioning on edit page

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1837,3 +1837,9 @@ label.oauth.1mth=1 month
 label.main.tab.documents=Document Management
 
 label.documentSuggestion.docNotFoundOrNotVisible=Document not found or not visible
+
+# comment + versioning tooltips
+label.editComment=Change comment
+label.editComment.tooltip=This comment will be visible in the logs displayed in the "History" tab
+label.versioning.currentVersion.tooltip=Current version of the document
+label.versioning.changeVersion.tooltip=If a new version is created, the new archived version will hold the values presented in this form
