--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -562,6 +562,12 @@ message.versioning.editoptionsinfo.no_increment=The version won't be incremented
 message.versioning.editoptionsinfo.undefined=Undefined version increment options
 feedback.versioning.versionRemoved=Version removed
 
+# comment + versioning tooltips
+label.editComment=Change comment
+label.editComment.tooltip=This comment will be visible in the logs displayed in the "History" tab
+label.versioning.currentVersion.tooltip=Current version of the document
+label.versioning.changeVersion.tooltip=If a new version is created, the new archived version will hold the values presented in this form 
+
 label.vocabulary.selectValue=Select a value
 label.vocabulary.obsolete.yes=Yes
 label.vocabulary.obsolete.no=No
