--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -749,6 +749,12 @@ message.versioning.editoptionsinfo.no_increment=le num\u00e9ro de version ne ser
 message.versioning.editoptionsinfo.undefined=Options de gestion de version non d\u00e9finies
 error.versioning.none_selected=Veuillez s\u00e9lectionner une option de gestion des versions.
 
+# comment + versioning tooltips
+label.editComment=Commentaire
+label.editComment.tooltip=Ce commentaire sera visible dans les \u00e9v\u00e8nements pr\u00e9sent\u00e9s dans l'onglet "Historique"
+label.versioning.currentVersion.tooltip=Version actuelle du document
+label.versioning.changeVersion.tooltip=Si une nouvelle version est cr\u00e9\u00e9e, la version archiv\u00e9e portera les valeurs visibles dans ce formulaire 
+
 label.vocabulary.selectValue=S\u00e9lectionnez une valeur.
 label.vocabulary.select=S\u00e9lectionnez un vocabulaire :
 label.vocabulary.obsolete.yes=Oui
