NXCM-465: display the title of the route started from the current doc if any

--- a/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -8,7 +8,9 @@ label.document.routing.initiator=Initiator
 label.document.routing.participatingDocuments=Participating documents
 label.document.routing.tokens=Tokens
 label.document.route.content.header.type=Type
-label.route.started=A route is started from this document
+label.route.started=is started from this document
+label.route.not.started=No route is started from this document
+label.route.info=The route
 label.step.folder.execution.type=Execution type
 label.step.operationIds=Operation Ids
 
