--- a/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -8,7 +8,9 @@ label.document.routing.initiator=Initiateur
 label.document.routing.participatingDocuments=Documents participatifs
 label.document.routing.tokens=Etiquette
 label.document.route.content.header.type=Type
-label.route.started=Une feuille de route est lancée sur ce document
+label.route.started=est lancée sur ce document
+label.route.info=La feuille de route
+label.route.not.started=Aucune feuille de route n'est lancée sur ce document
 label.step.folder.execution.type=Type d'exécution
 label.step.operationIds=Opération Ids
 
