NXCM-460 work on step and step containers labels

--- a/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -1,6 +1,8 @@
 DocumentRoute=Route
 StepFolder=Fork
 Step=Step
+Steps=Steps
+StepContainers=Step Containers
 DocumentRouteInstancesRoot=Route instances
 label.document.routing.cancel.route=Cancel Route
 label.document.routing.saveAsNew=Save route as New Instance
