--- a/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -1,6 +1,8 @@
 DocumentRoute=Feuille de route
 StepFolder=Branchement
 Step=Etape
+Steps=Etapes
+StepContainers=Branchements
 DocumentRouteInstancesRoot=Instances de feuille de route
 label.document.routing.cancel.route=Annuler Route
 label.document.routing.saveAsNew=Sauvegarder Route comme nouvelle route
