NXCM-462 rename save as new instance button

--- a/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -5,7 +5,7 @@ Steps=Steps
 StepContainers=Step Containers
 DocumentRouteInstancesRoot=Route instances
 label.document.routing.cancel.route=Cancel Route
-label.document.routing.saveAsNew=Save route as New Instance
+label.document.routing.saveAsNew=Duplicate
 label.document.routing.initiator=Initiator
 label.document.routing.participatingDocuments=Participating documents
 label.document.routing.tokens=Tokens
@@ -37,6 +37,7 @@ label.content.header.comments=Comments
 label.summary.route.locked.intro=The route is
 label.summary.route.locked=locked
 label.summary.route.unlocked=unlocked
+label.security.permission.validateRoute=Validate Route
 feedback.document.route.no.creation.rights=You don't have enough rights.
 feedback.casemanagement.document.route.already.locked=Route already locked!
 feedback.casemanagement.document.route.not.locked=Route not locked!
@@ -45,5 +46,6 @@ feedback.casemanagement.document.route.already.first.step.in.container=Step is a
 feedback.casemanagement.document.already.last.step.in.container=Step is already last in container
 feedback.casemanagement.document.route.cant.move.step.after.no.modifiable.step=Can not move  this step before a step which is not modifiable
 feedback.casemanagement.document.route.route_duplicated=Route has been duplicated
+feedback.casemanagement.document.route.selected_route_duplicated=Selected route have been duplicated
 feedback.casemanagement.document.route.cant.move.step.before.already.running.step=Can not move this step before an already running step
 feedback.casemanagement.document.route.cant.move.step.after.already.running.step=Can not move this step after an already running step
