--- a/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-document-routing-web/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -5,7 +5,7 @@ Steps=Etapes
 StepContainers=Branchements
 DocumentRouteInstancesRoot=Instances de feuille de route
 label.document.routing.cancel.route=Annuler Route
-label.document.routing.saveAsNew=Sauvegarder Route comme nouvelle route
+label.document.routing.saveAsNew=Dupliquer
 label.document.routing.initiator=Initiateur
 label.document.routing.participatingDocuments=Documents participatifs
 label.document.routing.tokens=Etiquette
@@ -37,13 +37,15 @@ label.content.header.comments=Commentaires
 label.summary.route.locked.intro=La route est
 label.summary.route.locked=verrouill\u00E9e
 label.summary.route.unlocked=d\u00E9verrouill\u00E9e
+label.security.permission.validateRoute=Valider la route
 feedback.document.route.no.creation.rights=Vous ne disposez pas des droits suffisants.
 feedback.casemanagement.document.route.already.locked=Route d\u00E9verrouill\u00E9\!
 feedback.casemanagement.document.route.not.locked=Route pas d\u00E9verrouill\u00E9\!
 feedback.casemanagement.document.route.cant.move.steps.in.parallel.container=Les déplacements ne sont pas possibles dans une feuille de route ou un branchement en parallèle
 feedback.casemanagement.document.route.already.first.step.in.container=L'étape est déjà en première position
-feedback.casemanagement.document.already.last.step.in.container=L'étape est déjà en dernière position
+feedback.casemanagement.document.already.last.step.in.container=L'\u00E9tape est déjà en dernière position
 feedback.casemanagement.document.route.cant.move.step.after.no.modifiable.step=Impossible déplacer avant une étape déjà exécutée
-feedback.casemanagement.document.route.route_duplicated=La route a été dupliquée
+feedback.casemanagement.document.route.route_duplicated=La route a \u00E9t\u00E9 dupliqu\u00E9e
+feedback.casemanagement.document.route.selected_route_duplicated=Les routes  ont \u00E9t\u00E9 dupliqu\u00E9es
 feedback.casemanagement.document.route.cant.move.step.before.already.running.step=Impossible de déplacer cette étape avant une étape déjà exécutée
 feedback.casemanagement.document.route.cant.move.step.after.already.running.step=Impossible de déplacer cette étape après une étape déjà exécutée
