NXP-7466:header labels

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1120,6 +1120,9 @@ label.vocabulary.entry.id.value=Codes des entr\u00e9es
 title.vocabulary.details=D\u00e9tails du vocabulaire \#{vocabularyActions.selectedVocabularyName}
 title.vocabulary.entry=Entr\u00e9es pour le vocabulaire \#{vocabularyActions.selectedVocabularyName}
 title.vocabulary.entry.details=D\u00e9tails de l'entr\u00e9e
+label.vocabulary.l10n.entry.label.default=Libell\u00e9 par d\u00e9faut
+label.vocabulary.l10n.entry.label.english=Libell\u00e9 anglais
+label.vocabulary.l10n.entry.label.french=Libell\u00e9 fran\u00e7ais
 vocabulary.entry.added=Entr\u00e9e de vocabulaire ajout\u00e9e \!
 vocabulary.entry.not.added=Entr\u00e9e de vocabulaire non-ajout\u00e9e \!
 vocabulary.entry.edited=Entr\u00e9e de vocabulaire \u00e9dit\u00e9e \!
