--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1415,6 +1415,9 @@ label.vocabulary.obsolete.no=No
 label.vocabulary.obsolete.yes=Yes
 label.vocabulary.selectValue=Select a value
 label.vocabulary.select=Select a vocabulary:
+label.vocabulary.l10n.entry.label.default=Default Label
+label.vocabulary.l10n.entry.label.english=English Label
+label.vocabulary.l10n.entry.label.french=French Label
 label.webContainer=WebContainer
 label.webpage.creation.date=Created
 label.webpage.modification.date=Modified
