--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -746,6 +746,9 @@ label.vocabulary.entry.order=Order
 label.vocabulary.entry.parent=Parent
 label.vocabulary.name=Vocabulary name
 label.vocabulary.select=Select a vocabulary:
+label.vocabulary.l10n.entry.label.default=Default Label
+label.vocabulary.l10n.entry.label.english=English Label
+label.vocabulary.l10n.entry.label.french=French Label
 
 title.create.vocabulary.entry=Add a new vocabulary entry
 title.vocabulary.details=#{vocabularyActions.selectedVocabularyName} vocabulary details
