NXP-7633: change message warning about connected users in admin center

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -293,7 +293,7 @@ label.setup.nuxeo.http.proxy.login=Login
 label.setup.nuxeo.http.proxy.password=Password
 label.restart.confirm=Restart server now?
 label.action.restart=Restart server
-label.restart.connectedusers= user(s) currently connected
+label.restart.connectedusers= active HTTP session(s)
 
 adminsubtab.usersActivity.userSessions.title = User's HTTP Sessions
 adminsubtab.usersActivity.userSessions.total = Total number of active HTTP Sessions
