--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -292,7 +292,7 @@ label.setup.nuxeo.http.proxy.port=Port
 label.setup.nuxeo.http.proxy.login=Nom d'utilisateur
 label.setup.nuxeo.http.proxy.password=Mot de passe
 label.restart.confirm=Red\u00e9marrer le serveur maintenant ?
-label.restart.connectedusers= utilisateur(s) actuellement connect\u00e9(s)
+label.restart.connectedusers= session(s) HTTP active(s)
 label.action.restart=Red\u00e9marrer le serveur
 
 
