NXP-7658: new dropdown list to filter deleted documents in relation search screen

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -250,6 +250,7 @@ label.relation.search.all_words=Required words
 label.relation.search.all_words.info=Plain-text search also looks inside documents (MS Office, PDF, ...)
 label.relation.search.path=Path
 label.relation.search.popup.title=Search document popup
+label.relation.deleted.documents=Search also for deleted documents?
 
 # for notification logs
 
