--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -196,6 +196,7 @@ label.relation.search.all_words=Plein texte
 label.relation.search.all_words.info=La recherche plein-texte prend en compte le contenu des documents (MS Office, PDF, ...)
 label.relation.search.path=Chemin
 label.relation.search.popup.title=Popup de recherche de document
+label.relation.deleted.documents=Inclure les documents supprim\u00e9es ?
 
 afterRelationCreation=Relation cr\u00e9\u00e9e
 afterRelationModification=Relation modifi\u00e9e
