--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1174,6 +1174,7 @@ label.relation.search.all_words=Required words
 label.relation.search.all_words.info=Plain-text search also looks inside documents (MS Office, PDF, ...)
 label.relation.search.path=Path
 label.relation.search.popup.title=Search document popup
+label.relation.deleted.documents=Search also for deleted documents?
 label.relation.unknown.document.uid=Unknown document
 label.relation.addPath=Add a path
 label.review.abandon.workflow=Abandon workflow
