NXP-6179: fix label

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -208,7 +208,7 @@ base.navigation.subjects=Browsing by subjects
 can_not_delete_proxies=Documents cannot be deleted, but can be unpublished.
 cancel=Cancel
 command.add.comments=Add a comment
-command.add.files=Add new files
+command.add.files=Store uploaded files
 command.add=Add
 command.addNewAttachedFile=Add new attached file
 command.advancedSearch=Advanced search
