--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -1588,7 +1588,7 @@ label.summary.rank.title=Filing
 label.summary.lastComments= Last comments
 
 label.upload.files.download=Upload your files
-command.add.files=Add new files
+command.add.files=Store uploaded files
 fileImporter.error.nullUploadedFile=You must upload a file
 fileImporter.error.unsupportedFile=We don't support this type of file in this kind of folder
 
