--- a/README
+++ b/README
@@ -1,5 +1,15 @@
 Nuxeo used to create Domain directly with localconfiguration 
 
+## How to build
+
+You can build Nuxeo Social Collaboration with:
+
+	$ ant build
+
+If you want to build and launch the tests, do it with:
+
+	$ ant build-with-tests 
+
 ## About Nuxeo
 
 Nuxeo provides a modular, extensible Java-based [open source software platform for enterprise content management] [1] and packaged applications for [document management] [2], [digital asset management] [3] and [case management] [4]. Designed by developers for developers, the Nuxeo platform offers a modern architecture, a powerful plug-in model and extensive packaging capabilities for building content applications.
