--- a/nuxeo-user-dashboard/nuxeo-user-dashboard/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-user-dashboard/nuxeo-user-dashboard/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -1,3 +1,2 @@
-label.user.dashboard=My Personal Dashboard
-user.center.dashboard=My dashboard
+user.center.dashboard=Dashboard
 tab.anonymous.dashboard.management=Anonymous dashboard management
