man/woman -> male/female

--- a/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -3,8 +3,8 @@ label.userprofile.avatar=Avatar
 label.userprofile.birthdate=Birth date
 label.userprofile.phonenumber=Phone number
 label.userprofile.gender=Gender
-label.userprofile.gender.man=Man
-label.userprofile.gender.woman=Woman
+label.userprofile.gender.male=Male
+label.userprofile.gender.female=Female
 helplabel.userprofile.birthdate=Enter a Birth date following the format "mm/dd/yy" such as "10/29/90"
 helplabel.userprofile.avatar=Avatar images greater than 300x200 pixels are resized
 
