--- a/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-user-profile/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -3,8 +3,8 @@ label.userprofile.avatar=Avatar
 label.userprofile.birthdate=Date de naissance
 label.userprofile.phonenumber=Num\u00E9ro de t\u00E9l\u00E9phone
 label.userprofile.gender=Sexe
-label.userprofile.gender.man=Homme
-label.userprofile.gender.woman=Femme
+label.userprofile.gender.male=Homme
+label.userprofile.gender.female=Femme
 helplabel.userprofile.birthdate=Saisir une date d'anniversaire au format  "jj/mm/aa" comme "29/10/90"
 helplabel.userprofile.avatar=Les images d'avatar dont la taille est sup\u00E9rieure \u00E0 300x200 pixels sont redimensionn\u00E9es
 
