NXP-7581: save work done

--- a/nuxeo-platform-video-jsf/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-platform-video-jsf/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -1,1 +1,7 @@
 heading.storyboard=Storyboard
+heading.videoConversions=Conversions
+
+action.video.launch.conversion=Convertir
+
+status.video.conversionQueued=En attente : {0}/{1}
+status.video.conversionPending=En conversion...
