NXP-7765: Add Markdown support to Note and File documents

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -567,7 +567,7 @@ feedback.versioning.versionRemoved=Version removed
 label.editComment=Change comment
 label.editComment.tooltip=This comment will be visible in the logs displayed in the "History" tab
 label.versioning.currentVersion.tooltip=Current version of the document
-label.versioning.changeVersion.tooltip=If a new version is created, the new archived version will hold the values presented in this form 
+label.versioning.changeVersion.tooltip=If a new version is created, the new archived version will hold the values presented in this form
 
 label.vocabulary.selectValue=Select a value
 label.vocabulary.obsolete.yes=Yes
@@ -1861,6 +1861,7 @@ label.richtext.format=Format
 mimetype.html=Html
 mimetype.text=Text
 mimetype.xml=Xml
+mimetype.markdown=Markdown
 
 # Orderable actions
 command.order.moveup=Move up
