--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -754,7 +754,7 @@ error.versioning.none_selected=Veuillez s\u00e9lectionner une option de gestion 
 label.editComment=Commentaire
 label.editComment.tooltip=Ce commentaire sera visible dans les \u00e9v\u00e8nements pr\u00e9sent\u00e9s dans l'onglet "Historique"
 label.versioning.currentVersion.tooltip=Version actuelle du document
-label.versioning.changeVersion.tooltip=Si une nouvelle version est cr\u00e9\u00e9e, la version archiv\u00e9e portera les valeurs visibles dans ce formulaire 
+label.versioning.changeVersion.tooltip=Si une nouvelle version est cr\u00e9\u00e9e, la version archiv\u00e9e portera les valeurs visibles dans ce formulaire
 
 label.vocabulary.selectValue=S\u00e9lectionnez une valeur.
 label.vocabulary.select=S\u00e9lectionnez un vocabulaire :
@@ -1856,6 +1856,7 @@ label.richtext.format=Format
 mimetype.html=Html
 mimetype.text=Texte
 mimetype.xml=Xml
+mimetype.markdown=Markdown
 
 # Orderable actions
 command.order.moveup=D\u00e9placer vers le haut
