--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -87,6 +87,7 @@ label.richtext.format=Format
 mimetype.html=Html
 mimetype.text=Text
 mimetype.xml=Xml
+mimetype.markdown=Markdown
 
 ##############################################################################
 #
@@ -1530,9 +1531,6 @@ message.updated.rights=Rights updated
 message.versioning.editoptionsinfo.auto_increment=The version will be incremented automatically
 message.versioning.editoptionsinfo.no_increment=The version won't be incremented
 message.versioning.editoptionsinfo.undefined=Undefined version increment options
-mimetype.html=Html
-mimetype.text=Text
-mimetype.xml=Xml
 misc=Miscellaneous
 moderation_pending=Waiting for approval
 moderation_published=Published
